Now you can try to add input box, so we can build the core functionality

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "bootstrap": "^4.3.1",
     "gun": "^0.2019.726",
     "react": "^16.9.0",
